--- a/src/style/forgotpassword.scss
+++ b/src/style/forgotpassword.scss
@@ -262,17 +262,13 @@ ul {
 /*forgotpassword */
 
 .bg-forgotpassword {
-    background-color: var(--primary-500);
+  background-color: var(--primary-500);
 }
 
 .bg-fp{
-    background-color: var(--accent);
+ background-color: var(--accent);
 }
 
-.savingsense-logo1{
-  display: flex;
-  justify-content: center;
-}
 
 .react-icon{
   display: flex;
@@ -280,7 +276,7 @@ ul {
 }
 
 .bg-wanda{
-  width: 25vw;
+  width: 8vw;
   color: var(--accent);
   background-color: var(--primary-600);
   border-color: var(--accent);
@@ -306,21 +302,8 @@ ul {
 }
 
 
-
-
-
-@media only screen and (min-width: 768px) {
-
-  .bg-fotgotpassword{
-    width: 23%;
-  }
-
-  .bg-wanda{
-    width: 8vw;
-
-  }
-
-
-
+.border-input{
+  display: flex;
+  justify-content: center;
 }
 
