--- a/src/style/login.scss
+++ b/src/style/login.scss
@@ -269,3 +269,12 @@ ul {
     background-color: var(--accent);
   
 }
+
+@media only screen and (min-width: 760px) {
+
+
+  .logo-center{
+    margin-left: -12%;
+  }
+
+}
